overlays/centre-sub/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring  # [중요] 그라파나가 설치된 네임스페이스
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    force-update: "grafana"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - grafana.paulryu93.ddns.net
    secretName: grafana-tls
  rules:
  - host: grafana.paulryu93.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana # (실제 서비스 이름 확인 필요)
            port:
              number: 80
